Update code outputs