@@ -87,8 +87,8 @@ After the environment is set up, follow the steps below to build a native execut
    import ballerina/http;
 
    service / on new http:Listener(8080) {
-       resource function get greeting() returns string { 
-              return "Hello, World!"; 
+       resource function get greeting() returns string {   
+              return "Hello, World!";   
        }
    }
    ```
@@ -96,59 +96,58 @@ After the environment is set up, follow the steps below to build a native execut
 3. Run `bal build --graalvm` to create the graalvm executable.
    ```
    $ bal build --graalvm
-   WARNING: GraalVM Native Image generation in Ballerina is an experimental feature
-   Compiling source
-       user/hello_world:0.1.0
 
-   Generating executable with Native image
-   =======================================================================================================
+   Compiling source
+        user/hello_world:0.1.0
+
+   ==============================================================================================
    GraalVM Native Image: Generating 'hello_world' (executable)...
-   =======================================================================================================
-   [1/7] Initializing...                                                                  (15.7s @ 0.40GB)
-    Version info: 'GraalVM 22.3.0 Java 11 CE'
-    Java version info: '11.0.17+8-jvmci-22.3-b08'
-    C compiler: cc (apple, x86_64, 14.0.0)
+   ==============================================================================================
+   [1/7] Initializing...                                                          (7.3s @ 0.47GB)
+    Version info: 'GraalVM 22.3.1 Java 11 CE'
+    Java version info: '11.0.18+10-jvmci-22.3-b13'
+    C compiler: cc (apple, arm64, 14.0.3)
     Garbage collector: Serial GC
     2 user-specific feature(s)
     - com.oracle.svm.thirdparty.gson.GsonFeature
     - io.ballerina.stdlib.crypto.svm.BouncyCastleFeature
-   [2/7] Performing analysis...  [************]                                          (169.1s @ 4.48GB)
-     24,836 (94.74%) of 26,215 classes reachable
-     81,216 (82.54%) of 98,394 fields reachable
-    145,899 (76.07%) of 191,785 methods reachable
-      1,392 classes,   712 fields, and 2,478 methods registered for reflection
+   [2/7] Performing analysis...  [***********]                                  (116.0s @ 2.63GB)
+     24,926 (93.71%) of 26,599 classes reachable
+     81,454 (81.08%) of 100,467 fields reachable
+    134,363 (72.76%) of 184,660 methods reachable
+      1,477 classes,    15 fields, and 2,740 methods registered for reflection
          91 classes,    94 fields, and    66 methods registered for JNI access
-          6 native libraries: -framework CoreServices, -framework Foundation, dl, pthread, stdc++, z
-   [3/7] Building universe...                                                             (13.3s @ 3.25GB)
-   [4/7] Parsing methods...      [******]                                                 (23.7s @ 3.12GB)
-   [5/7] Inlining methods...     [***]                                                    (12.4s @ 4.63GB)
-   [6/7] Compiling methods...    [***************]                                       (130.8s @ 4.54GB)
-   [7/7] Creating image...                                                                (19.1s @ 5.45GB)
-     88.47MB (60.32%) for code area:   105,528 compilation units
-     57.72MB (39.36%) for image heap:  478,129 objects and 30 resources
-    484.48KB ( 0.32%) for other data
-    146.66MB in total
-   -------------------------------------------------------------------------------------------------------
-   Top 10 packages in code area:                 Top 10 object types in image heap:
-     17.96MB ballerina.http/2                      15.60MB byte[] for code metadata
-      4.49MB ballerina.http/2.types                 9.81MB byte[] for embedded resources
-      2.58MB ballerina.io/1                         6.59MB java.lang.Class
-      1.85MB ballerina.file/1                       5.02MB byte[] for java.lang.String
-      1.72MB ballerina.jwt/2                        4.62MB java.lang.String
-      1.57MB sun.security.ssl                       3.58MB byte[] for general heap data
-      1.30MB ballerina.oauth2/2                     2.27MB com.oracle.svm.core.hub.DynamicHubCompanion
-      1.23MB java.lang.invoke                       1.26MB byte[] for reflection metadata
-      1.18MB com.sun.media.sound                  959.04KB java.lang.String[]
-   1011.31KB ballerina.lang$0046query/0           919.38KB c.o.svm.core.hub.DynamicHub$ReflectionMetadata
-     52.84MB for 847 more packages                  6.45MB for 3500 more object types
-   -------------------------------------------------------------------------------------------------------
-               103.7s (15.9% of total time) in 62 GCs | Peak RSS: 5.65GB | CPU load: 2.53
-   -------------------------------------------------------------------------------------------------------
+          6 native libraries: -framework CoreServices,-framework Foundation,dl,pthread,stdc++,z
+   [3/7] Building universe...                                                    (12.4s @ 4.55GB)
+   [4/7] Parsing methods...      [*****]                                         (21.1s @ 3.22GB)
+   [5/7] Inlining methods...     [***]                                            (7.3s @ 4.51GB)
+   [6/7] Compiling methods...    [********]                                      (75.3s @ 4.54GB)
+   [7/7] Creating image...                                                        (9.9s @ 5.48GB)
+     87.22MB (58.51%) for code area:    97,270 compilation units
+     60.14MB (40.34%) for image heap:  472,434 objects and 32 resources
+      1.72MB ( 1.15%) for other data
+    149.07MB in total
+   ----------------------------------------------------------------------------------------------
+   Top 10 packages in code area:         Top 10 object types in image heap:
+     15.91MB ballerina.http/2              14.81MB byte[] for code metadata
+      4.17MB ballerina.http/2.types         3.09MB byte[] for embedded resources
+      2.83MB ballerina.io/1                 6.54MB java.lang.Class
+      1.59MB sun.security.ssl               5.06MB byte[] for java.lang.String
+      1.37MB ballerina.file/1               4.62MB java.lang.String
+      1.19MB com.sun.media.sound            3.64MB byte[] for general heap data
+      1.19MB ballerina.jwt/2                2.28MB com.oracle.svm.core.hub.DynamicHubCompanion
+      1.14MB ballerina.http/2.creators      1.19MB byte[] for reflection metadata
+      1.07MB ballerina.oauth2/2           963.28KB java.lang.String[]
+      1.06MB ballerina.lang$0046query/0   922.42KB c.o.svm.core.hub.DynamicHub$ReflectionMetadata
+     55.13MB for 889 more packages        6.12MB for 3467 more object types
+   ----------------------------------------------------------------------------------------------
+              36.0s (13.6% of total time) in 60 GCs | Peak RSS: 3.53GB | CPU load: 3.18
+   ----------------------------------------------------------------------------------------------
    Produced artifacts:
-   /Users/user/Documents/hello_world/target/bin/hello_world (executable)
-   /Users/user/Documents/hello_world/target/bin/hello_world.build_artifacts.txt (txt)
-   =======================================================================================================
-   Finished generating 'hello_world' in 6m 24s.
+    /Users/user/hello_world/target/bin/hello_world (executable)
+    /Users/user/hello_world/target/bin/hello_world.build_artifacts.txt (txt)
+   ==============================================================================================
+   Finished generating 'hello_world' in 4m 24s.
    ```
 
    > **Note:** On Windows, the Microsoft Native Tools for Visual Studio must be initialized before building a native-image. You can do this by starting the **x64 Native Tools Command Prompt** that was installed with the Visual Studio Build Tools. In the x64 Native Tools Command Prompt, navigate to your project folder and run `bal build --native`.
@@ -202,118 +201,39 @@ After the environment is set up, follow the steps below to build the native exec
     ```
    $ bal build --graalvm --cloud=docker
    Compiling source
-       user/hello_docker:0.1.0
-
-   Generating executable
-
+           user/hello_docker:0.1.0
+   
    Generating artifacts
-
+   
    Building the native image. This may take a while
-
-   Sending build context to Docker daemon  34.99MB
-   Step 1/11 : FROM ballerina/native-builder:latest as build
-   latest: Pulling from ballerina/native-builder
-   e54b73e95ef3: Pull complete 
-   610e102c116f: Pull complete 
-   1c4500f6be50: Pull complete 
-   6d96a89dde23: Pull complete 
-   Digest: sha256:ad5bccc29f6f317283454c16321cce8d7521273032cf346364eb32b077abac0f
-   Status: Downloaded newer image for ballerina/native-builder:latest
-    ---> a8caa408cd81
-   Step 2/11 : WORKDIR /app/build
-    ---> Running in 14262200d0d3
-   Removing intermediate container 14262200d0d3
-    ---> 750b429d3412
-   Step 3/11 : COPY hello_docker.jar .
-    ---> 75c2e6ab58bd
-   Step 4/11 : RUN sh build-native.sh hello_docker.jar hello_docker
-    ---> Running in ba1e3c6403eb
-   WARNING: Unknown module: org.graalvm.nativeimage.llvm specified to --add-exports
-   WARNING: Unknown module: org.graalvm.nativeimage.llvm specified to --add-exports
-   WARNING: Unknown module: org.graalvm.nativeimage.llvm specified to --add-exports
-   ========================================================================================================
-   GraalVM Native Image: Generating 'hello_docker' (executable)...
-   ========================================================================================================
-   [1/7] Initializing...                                                                   (38.4s @ 0.41GB)
-    Version info: 'GraalVM 22.2.0 Java 11 CE'
-    Java version info: '11.0.16+8-jvmci-22.2-b06'
-    C compiler: gcc (redhat, x86_64, 8.5.0)
-    Garbage collector: Serial GC
-    2 user-specific feature(s)
-    - com.oracle.svm.thirdparty.gson.GsonFeature
-    - io.ballerina.stdlib.crypto.svm.BouncyCastleFeature
-   [2/7] Performing analysis...  [************]                                           (171.7s @ 3.36GB)
-     25,054 (94.83%) of 26,419 classes reachable
-     81,841 (82.43%) of 99,283 fields reachable
-    147,544 (76.50%) of 192,861 methods reachable
-      1,392 classes,   712 fields, and 2,489 methods registered for reflection
-         91 classes,    93 fields, and    69 methods registered for JNI access
-          7 native libraries: dl, m, pthread, rt, stdc++, z
-   [3/7] Building universe...                                                              (13.5s @ 3.48GB)
-   [4/7] Parsing methods...      [*****]                                                   (26.3s @ 2.43GB)
-   [5/7] Inlining methods...     [***]                                                      (8.7s @ 2.73GB)
-   [6/7] Compiling methods...    [************]                                           (155.1s @ 2.74GB)
-   [7/7] Creating image...                                                                 (15.5s @ 2.95GB)
-     93.75MB (61.13%) for code area:   106,991 compilation units
-     59.04MB (38.49%) for image heap:  477,025 objects and 91 resources
-    594.88KB ( 0.38%) for other data
-    153.37MB in total
-   --------------------------------------------------------------------------------------------------------
-   Top 10 packages in code area:                  Top 10 object types in image heap:
-     19.30MB ballerina.http/2                       15.89MB byte[] for code metadata
-      4.50MB ballerina.http/2.types                 10.36MB byte[] for embedded resources
-      2.82MB ballerina.io/1                          6.83MB java.lang.Class
-      1.91MB ballerina.file/1                        5.03MB byte[] for java.lang.String
-      1.80MB ballerina.jwt/2                         4.60MB java.lang.String
-      1.60MB sun.security.ssl                        3.60MB byte[] for general heap data
-      1.42MB ballerina.oauth2/2                      2.29MB com.oracle.svm.core.hub.DynamicHubCompanion
-      1.25MB java.lang.invoke                        1.28MB byte[] for reflection metadata
-      1.22MB com.sun.media.sound                   974.95KB java.lang.String[]
-      1.06MB ballerina.lang$0046query/0            926.91KB c.o.svm.core.hub.DynamicHub$ReflectionMetadata
-     56.09MB for 865 more packages                   6.28MB for 3527 more object types
-   --------------------------------------------------------------------------------------------------------
-              58.4s (12.6% of total time) in 124 GCs | Peak RSS: 5.41GB | CPU load: 6.50
-   --------------------------------------------------------------------------------------------------------
-   Produced artifacts:
-    /app/build/hello_docker (executable)
-    /app/build/hello_docker.build_artifacts.txt (txt)
-   ========================================================================================================
-   Finished generating 'hello_docker' in 6m 32s.
-   Removing intermediate container ba1e3c6403eb
-    ---> e7e7bce1a5e8
-   Step 5/11 : FROM debian:11-slim
-   11-slim: Pulling from library/debian
-   e9995326b091: Pull complete 
-   Digest: sha256:e8ad0bc7d0ee6afd46e904780942033ab83b42b446b58efa88d31ecf3adf4678
-   Status: Downloaded newer image for debian:11-slim
-    ---> acdab49503b5
-   Step 6/11 : RUN useradd -ms /bin/bash ballerina
-    ---> Running in 7c97f3c18072
-   Removing intermediate container 7c97f3c18072
-    ---> 5fbbfaaf8178
-   Step 7/11 : WORKDIR /home/ballerina
-    ---> Running in e6d305ff82b5
-   Removing intermediate container e6d305ff82b5
-    ---> dd05ecf72a90
-   Step 8/11 : EXPOSE  8080
-    ---> Running in 562d3824217c
-   Removing intermediate container 562d3824217c
-    ---> f38b549838cd
-   Step 9/11 : USER ballerina
-    ---> Running in eaf7546d5caa
-   Removing intermediate container eaf7546d5caa
-    ---> a3731c04eb7e
-   Step 10/11 : COPY --from=build /app/build/hello_docker .
-    ---> bf5d0ff0d524
-   Step 11/11 : CMD ["./hello_docker"]
-    ---> Running in 6f65341da08a
-   Removing intermediate container 6f65341da08a
-    ---> 47c7a10a79ef
-   Successfully built 47c7a10a79ef
-   Successfully tagged hello_docker:latest
-
+   
+   [+] Building 263.1s (16/16) FINISHED                                                                                                                                            
+    => [internal] load build definition from Dockerfile                                  0.0s
+    => => transferring dockerfile: 395B                                                  0.0s
+    => [internal] load .dockerignore                                                     0.0s
+    => => transferring context: 2B                                                       0.0s
+    => [internal] load metadata for docker.io/library/debian:11-slim                     5.7s
+    => [internal] load metadata for docker.io/ballerina/native-builder:2201.7.x         10.1s
+    => [auth] ballerina/native-builder:pull token for registry-1.docker.io               0.0s
+    => [auth] library/debian:pull token for registry-1.docker.io                         0.0s
+    => [build 1/4] FROM docker.io/ballerina/native-builder:2201.7.x                      1.7s
+    => => resolve docker.io/ballerina/native-builder:2201.7.x                            0.0s                                                                           
+    => CACHED [stage-1 1/4] FROM docker.io/library/debian:11-slim                        0.0s
+    => [internal] load build context                                                     0.3s
+    => => transferring context: 38.39MB                                                  0.3s
+    => [stage-1 2/4] RUN useradd -ms /bin/bash ballerina                                 0.5s
+    => [stage-1 3/4] WORKDIR /home/ballerina                                             0.0s
+    => [build 2/4] WORKDIR /app/build                                                    0.1s
+    => [build 3/4] COPY hello_docker.jar .                                               0.1s
+    => [build 4/4] RUN sh build-native.sh hello_docker.jar hello_docker                250.5s
+    => [stage-1 4/4] COPY --from=build /app/build/hello_docker .                         0.3s
+    => exporting to image                                                                0.3s
+    => => exporting layers                                                               0.3s
+    => => writing image                                                                  0.0s
+    => => naming to docker.io/library/hello_docker:latest                                0.0s
+   
    Execute the below command to run the generated Docker image: 
-       docker run -d -p 8080:8080 hello_docker:latest
+           docker run -d -p 8080:8080 hello_docker:latest
    ```
 
    The Docker file :
@@ -322,6 +242,7 @@ After the environment is set up, follow the steps below to build the native exec
    FROM ballerina/native-builder:latest as build
    WORKDIR /app/build
    COPY hello_docker.jar .
+   
    RUN sh build-native.sh hello_docker.jar hello_docker
    
    FROM debian:11-slim
@@ -330,6 +251,7 @@ After the environment is set up, follow the steps below to build the native exec
    EXPOSE  8080
    USER ballerina
    COPY --from=build /app/build/hello_docker .
+   
    CMD ["./hello_docker"]
    ```
 
@@ -353,7 +275,8 @@ It is recommended to use the JVM for verifying the functionality of the applicat
 * WARNING: Some dependencies may not be GraalVM compatible.               *
 ***************************************************************************
 
-The following Ballerina dependencies in your project could pose compatibility issues with GraalVM. 
+The following Ballerina dependencies in your project could pose compatibility
+issues with GraalVM. 
 
 Packages pending compatibility verification with GraalVM:
 
@@ -367,9 +290,14 @@ Packages marked as incompatible with GraalVM:
 - PackageB
 - PackageC
 
-Please note that generating a GraalVM native image may fail or result in runtime issues if these packages rely on features that are not supported by GraalVM's native image generation process.
+Please note that generating a GraalVM native image may fail or result in runtime
+issues if these packages rely on features that are not supported by GraalVM's
+native image generation process.
 
-It is recommended to review the API documentation or contact the maintainers of these packages for more information on their GraalVM compatibility status. You may need to adjust or find alternatives for these packages before proceeding with GraalVM native image generation.
+It is recommended to review the API documentation or contact the maintainers of
+these packages for more information on their GraalVM compatibility status. You
+may need to adjust or find alternatives for these packages before proceeding
+with GraalVM native image generation.
 
 ****************************************************************************
 ```
@@ -424,9 +352,13 @@ If the package utilizes any Java platform libraries specified in the Ballerina.t
 * WARNING: Package is not verified with GraalVM.                           *
 ****************************************************************************
 
-The GraalVM compatibility property has not been defined for the package '<package-name>. This could potentially lead to compatibility issues with GraalVM.
+The GraalVM compatibility property has not been defined for the package
+'<package-name>. This could potentially lead to compatibility issues with GraalVM.
 
-To resolve this warning, please ensure that all Java dependencies of this package are compatible with GraalVM. Subsequently, update the Ballerina.toml file under the section '[platform.<java*>]' with the attribute 'graalvmCompatible = true'.
+To resolve this warning, please ensure that all Java dependencies of this
+package are compatible with GraalVM. Subsequently, update the Ballerina.toml
+file under the section '[platform.<java*>]' with the attribute
+'graalvmCompatible = true'.
 
 ****************************************************************************
 ```
